docs/envoy/v1.15.0/_sources/api-v3/extensions/filters/network/rocketmq_proxy/v3/rocketmq_proxy.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/network/rocketmq_proxy/v3/rocketmq_proxy.proto:

RocketMQ Proxy
==============

.. _extension_envoy.filters.network.rocketmq_proxy:


This extension may be referenced by the qualified name *envoy.filters.network.rocketmq_proxy*

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

RocketMQ Proxy :ref:`configuration overview <config_network_filters_rocketmq_proxy>`.

.. _envoy_v3_api_msg_extensions.filters.network.rocketmq_proxy.v3.RocketmqProxy:

extensions.filters.network.rocketmq_proxy.v3.RocketmqProxy
----------------------------------------------------------

`[extensions.filters.network.rocketmq_proxy.v3.RocketmqProxy proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/extensions/filters/network/rocketmq_proxy/v3/rocketmq_proxy.proto#L22>`_


.. code-block:: json

  {
    "stat_prefix": "...",
    "route_config": "{...}",
    "transient_object_life_span": "{...}",
    "develop_mode": "..."
  }

.. _envoy_v3_api_field_extensions.filters.network.rocketmq_proxy.v3.RocketmqProxy.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The human readable prefix to use when emitting statistics.
  
  
.. _envoy_v3_api_field_extensions.filters.network.rocketmq_proxy.v3.RocketmqProxy.route_config:

route_config
  (:ref:`extensions.filters.network.rocketmq_proxy.v3.RouteConfiguration <envoy_v3_api_msg_extensions.filters.network.rocketmq_proxy.v3.RouteConfiguration>`) The route table for the connection manager is specified in this property.
  
  
.. _envoy_v3_api_field_extensions.filters.network.rocketmq_proxy.v3.RocketmqProxy.transient_object_life_span:

transient_object_life_span
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The largest duration transient object expected to live, more than 10s is recommended.
  
  
.. _envoy_v3_api_field_extensions.filters.network.rocketmq_proxy.v3.RocketmqProxy.develop_mode:

develop_mode
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If develop_mode is enabled, this proxy plugin may work without dedicated traffic intercepting
  facility without considering backward compatibility of exiting RocketMQ client SDK.
  
  

